@@ -7,32 +7,36 @@ use Moose::Exporter;
 my ( $import, $unimport, $init_meta ) = Moose::Exporter->setup_import_methods(
 	with_meta => [ 'tzil_file', 'tzil_dir' ],
 	also      => 'Moose',
-    class_metaroles => {
-        class       => [ 'Text::Zilla::Role::MetaClass' ],
-    },
+	class_metaroles => {
+		class       => [ 'Text::Zilla::Role::MetaClass' ],
+	},
 );
 
 sub init_meta {
-    my ( $class, %args ) = @_;
-    my $for = $args{for_class};
-    Moose->init_meta( for_class => $for );
-    goto $init_meta;
+	my ( $class, %args ) = @_;
+	my $for = $args{for_class};
+	Moose->init_meta( for_class => $for );
+	goto $init_meta;
 }
 
 sub tzil_file {
-	my ( $meta, $file_class_name ) = @_;
+	my ( $meta, @file_class_names ) = @_;
 	$meta->tzil_type('file');
-	$file_class_name = 'Base' if !$file_class_name;
-	my $file_class = __PACKAGE__.'::Role::File::'.$file_class_name;
-	Moose::with( $meta, $file_class );
+	push @file_class_names, 'Base' if !@file_class_names;
+	for (@file_class_names) {
+		my $file_class = __PACKAGE__.'::Role::File::'.$_;
+		Moose::with( $meta, $file_class );
+	}
 }
 
 sub tzil_dir {
-	my ( $meta, $dir_class_name ) = @_;
+	my ( $meta, @dir_class_names ) = @_;
 	$meta->tzil_type('dir');
-	$dir_class_name = 'Base' if !$dir_class_name;
-	my $dir_class = __PACKAGE__.'::Role::Dir::'.$dir_class_name;
-	Moose::with( $meta, $dir_class );
+	push @dir_class_names, 'Base' if !@dir_class_names;
+	for (@dir_class_names) {
+		my $dir_class = __PACKAGE__.'::Role::Dir::'.$_;
+		Moose::with( $meta, $dir_class );
+	}
 }
 
 1;
